--- a/wwwroot/css/baseforms.css
+++ b/wwwroot/css/baseforms.css
@@ -153,3 +153,8 @@ input[readonly] {
 .bd_main_var-light {
   background-color: var(--color-light);
 }
+
+.delete_edit_error-span {
+  font-size: 1rem;
+  color: rgb(225, 33, 33);
+}
